<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>demo_component</name>
  <version>0.0.1</version>
  <description>Minimal composable C++ node that uses demo interfaces.</description>
  <maintainer email="lihanchen2004@163.com">Lihan Chen</maintainer>
  <license>Apache-2.0</license>
  <author email="lihanchen2004@163.com">Lihan Chen</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_action</depend>
  <depend>demo_interfaces</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_cmake_clang_format</test_depend>
	<test_depend>ament_cmake_clang_tidy</test_depend>
	<test_depend>ament_cmake_black</test_depend>
	<test_depend>ament_cmake_xmllint</test_depend>
	<test_depend>ament_cmake_copyright</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
