<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>repo_template</name>
  <version>0.0.1</version>
  <description>Minimal ROS 2 workspace template with example component and custom interfaces.</description>
  <maintainer email="lihanchen2004@163.com">Lihan Chen</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>demo_component</depend>
  <depend>demo_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
